--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "node node_modules/eslint/bin/eslint.js index.js lib/*.js && node node_modules/mocha/bin/mocha test/test.js"
+    "test": "node node_modules/eslint/bin/eslint.js index.js lib/*.js && node node_modules/mocha/bin/mocha test/**/*_test.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,8 @@
     "url-join": "0.0.1"
   },
   "devDependencies": {
-    "eslint": "^1.7.3"
+    "eslint": "^1.7.3",
+    "expect.js": "^0.3.1",
+    "mocha": "^2.3.3"
   }
 }
